@@ -21,6 +21,19 @@ PostgreSQL
     ALTER TABLE object_state ALTER COLUMN state_size SET NOT NULL;
     COMMIT;
 
+If you used RelStorage a 1.5.0 version before version b3 you'll need to
+migrate your blob_chunk table schema:
+
+    BEGIN;
+    ALTER TABLE blob_chunk RENAME COLUMN chunk TO oldbytea;    
+    ALTER TABLE blob_chunk ADD COLUMN chunk OID;
+    UPDATE blob_chunk bc SET chunk = (
+        SELECT oid FROM (
+            SELECT oid, lowrite(lo_open(oid, 131072), bc.oldbytea)
+            FROM lo_create(0) o(oid)) x);
+    ALTER TABLE blob_chunk ALTER COLUMN chunk SET NOT NULL;
+    ALTER TABLE blob_chunk DROP COLUMN oldbytea;
+    COMMIT;
 
 MySQL history-preserving
 ------------------------
